force-app/main/default/objects/User_Feedback__c/User_Feedback__c.object-meta.xml
<CustomObject>
    <label>User Feedback</label>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>