force-app/main/default/objects/User_Feedback__c/fields/clarityRating__c.field-meta.xml
<CustomField>
    <fullName>clarityRating__c</fullName>
    <label>clarityRating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>