force-app/main/default/objects/User_Feedback__c/fields/communicationRating__c.field-meta.xml
<CustomField>
    <fullName>communicationRating__c</fullName>
    <label>communicationRating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>