force-app/main/default/objects/User_Feedback__c/fields/overallRating__c.field-meta.xml
<CustomField>
    <fullName>overallRating__c</fullName>
    <label>overallRating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>