force-app/main/default/objects/User_Feedback__c/fields/timelinessRating__c.field-meta.xml
<CustomField>
    <fullName>timelinessRating__c</fullName>
    <label>timelinessRating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>